@@ -47,6 +47,60 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|InvocationTargetException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Method
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URL
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|URLClassLoader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Arrays
@@ -90,6 +144,16 @@ operator|.
 name|util
 operator|.
 name|LinkedHashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 
@@ -730,6 +794,52 @@ argument_list|(
 literal|"passwd"
 argument_list|)
 decl_stmt|;
+name|Option
+name|main
+init|=
+name|OptionBuilder
+operator|.
+name|withArgName
+argument_list|(
+literal|"main"
+argument_list|)
+operator|.
+name|hasArg
+argument_list|()
+operator|.
+name|withDescription
+argument_list|(
+literal|"the main class to runtime process"
+argument_list|)
+operator|.
+name|create
+argument_list|(
+literal|"main"
+argument_list|)
+decl_stmt|;
+name|Option
+name|args
+init|=
+name|OptionBuilder
+operator|.
+name|withArgName
+argument_list|(
+literal|"args"
+argument_list|)
+operator|.
+name|hasArgs
+argument_list|()
+operator|.
+name|withDescription
+argument_list|(
+literal|"the arguments to runtime process"
+argument_list|)
+operator|.
+name|create
+argument_list|(
+literal|"args"
+argument_list|)
+decl_stmt|;
 name|Options
 name|options
 init|=
@@ -924,6 +1034,20 @@ operator|.
 name|addOption
 argument_list|(
 name|passwd
+argument_list|)
+expr_stmt|;
+name|options
+operator|.
+name|addOption
+argument_list|(
+name|main
+argument_list|)
+expr_stmt|;
+name|options
+operator|.
+name|addOption
+argument_list|(
+name|args
 argument_list|)
 expr_stmt|;
 return|return
@@ -1904,6 +2028,42 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+if|if
+condition|(
+name|line
+operator|.
+name|hasOption
+argument_list|(
+literal|"main"
+argument_list|)
+condition|)
+block|{
+name|invoke
+argument_list|(
+name|ivy
+argument_list|,
+name|cache
+argument_list|,
+name|md
+argument_list|,
+name|confs
+argument_list|,
+name|line
+operator|.
+name|getOptionValue
+argument_list|(
+literal|"main"
+argument_list|)
+argument_list|,
+name|line
+operator|.
+name|getOptionValues
+argument_list|(
+literal|"args"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -2162,6 +2322,348 @@ name|getMessage
 argument_list|()
 argument_list|,
 name|ex
+argument_list|)
+throw|;
+block|}
+block|}
+specifier|private
+specifier|static
+name|void
+name|invoke
+parameter_list|(
+name|Ivy
+name|ivy
+parameter_list|,
+name|File
+name|cache
+parameter_list|,
+name|ModuleDescriptor
+name|md
+parameter_list|,
+name|String
+index|[]
+name|confs
+parameter_list|,
+name|String
+name|mainclass
+parameter_list|,
+name|String
+index|[]
+name|args
+parameter_list|)
+block|{
+name|List
+name|urls
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|XmlReportParser
+name|parser
+init|=
+operator|new
+name|XmlReportParser
+argument_list|()
+decl_stmt|;
+name|Collection
+name|all
+init|=
+operator|new
+name|LinkedHashSet
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|confs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Artifact
+index|[]
+name|artifacts
+init|=
+name|parser
+operator|.
+name|getArtifacts
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getModuleId
+argument_list|()
+argument_list|,
+name|confs
+index|[
+name|i
+index|]
+argument_list|,
+name|cache
+argument_list|)
+decl_stmt|;
+name|all
+operator|.
+name|addAll
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|artifacts
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|Iterator
+name|iter
+init|=
+name|all
+operator|.
+name|iterator
+argument_list|()
+init|;
+name|iter
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+name|Artifact
+name|artifact
+init|=
+operator|(
+name|Artifact
+operator|)
+name|iter
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|urls
+operator|.
+name|add
+argument_list|(
+name|ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|cache
+argument_list|,
+name|artifact
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"impossible to build ivy cache path: "
+operator|+
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|ex
+argument_list|)
+throw|;
+block|}
+name|URLClassLoader
+name|classLoader
+init|=
+operator|new
+name|URLClassLoader
+argument_list|(
+operator|(
+name|URL
+index|[]
+operator|)
+name|urls
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|URL
+index|[
+name|urls
+operator|.
+name|size
+argument_list|()
+index|]
+argument_list|)
+argument_list|,
+name|Main
+operator|.
+name|class
+operator|.
+name|getClassLoader
+argument_list|()
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|Class
+name|c
+init|=
+name|classLoader
+operator|.
+name|loadClass
+argument_list|(
+name|mainclass
+argument_list|)
+decl_stmt|;
+name|Method
+name|mainMethod
+init|=
+name|c
+operator|.
+name|getMethod
+argument_list|(
+literal|"main"
+argument_list|,
+operator|new
+name|Class
+index|[]
+block|{
+name|String
+index|[]
+operator|.
+expr|class
+block|}
+argument_list|)
+decl_stmt|;
+comment|// Split up arguments
+name|mainMethod
+operator|.
+name|invoke
+argument_list|(
+literal|null
+argument_list|,
+operator|new
+name|Object
+index|[]
+block|{
+name|args
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|cnfe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Could not find class: "
+operator|+
+name|mainclass
+argument_list|,
+name|cnfe
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|SecurityException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Could not find main method: "
+operator|+
+name|mainclass
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchMethodException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Could not find main method: "
+operator|+
+name|mainclass
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalAccessException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"No permissions to invoke main method: "
+operator|+
+name|mainclass
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|InvocationTargetException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Unexpected exception invoking main method: "
+operator|+
+name|mainclass
+argument_list|,
+name|e
 argument_list|)
 throw|;
 block|}
