@@ -1,3 +1,4 @@
+- NEW: Enhance standalone mode to execute java program by creating classloader of dependant jars from cache (IVY-210) (thanks to Peter Hayes)
 - NEW: Addition of Vfs Resolver which uses Commons-Vfs to resolve files (IVY-128) (thanks to Glen Marchesani, Matt Inger and Stephen Nesbitt)
 - NEW: "this" symbol for configuration mappings (IVY-183) (thanks to Karl Baum)
 - NEW: Always update artifacts when revision matches a regex pattern (IVY-189) (thanks to Johan Stuyts)
